daemon/front_end_thread.h
@@ -25,6 +25,7 @@
 #include <mutex>
 #include <queue>
 #include <unordered_map>
+#include <vector>
 
 // Forward decl
 namespace cb {
@@ -95,6 +96,18 @@ struct FrontEndThread {
         std::mutex mutex;
         PendingIoMap map;
     } pending_io;
+
+    /// A list of connections to signal if they're idle
+    class NotificationList {
+    public:
+        void push(Connection* c);
+        void remove(Connection* c);
+        void swap(std::vector<Connection*>& other);
+
+    protected:
+        std::mutex mutex;
+        std::vector<Connection*> connections;
+    } notification;
 
     /// index of this thread in the threads array
     size_t index = 0;
